# moseq2-app

./: .gitignore  .pdm-python  pyproject.toml  setup.py
moseq2_app/: main.py
moseq2_app/flip/: train.py  widget.py
moseq2_app/stat/: controller.py  view.py
scripts/: install_moseq2_app.sh  train_flip_classifier.py
tests/gui_tests/: test_main.py
