[project]
name = "moseq2-app"
version = "v1.3.1"
description = "Interactive data exploration tools for the MoSeq2 pipeline."
readme = "README.md"
authors = [
    {name = "Datta Lab"},
]
requires-python = "<3.13,>=3.9"
dependencies = [
    "bokeh>=2.4.2",
    "fastparquet>=0.4.1",
    "h5py>=2.10.0",
    "holoviews>=1.14.7",
    "ipython>=7.14.0",
    "ipywidgets<8.0.0",
    "jinja2>=3.0.1",
    "joblib>=0.15.1",
    "jupyter-bokeh>=2.0.3",
    "jupyter>=1.0.0",
    "matplotlib>=3.1.2",
    "numpy>=1.18.3,<2.0.0",
    "opencv-python>=4.1.2.30",
    "pandas>=1.0.5",
    "panel>=0.12.6",
    "plotly>=4.14.3",
    "qgrid>=1.3.1",
    "ruamel.yaml>=0.16.5",
    "scikit-image>=0.16.2",
    "scikit-learn>=0.20.3",
    "scipy>=1.3.2",
    "seaborn>=0.11.0",
    "moseq2-extract @ git+https://github.com/sneakers-the-rat/moseq2-extract.git@packaging",
    "moseq2-model @ git+https://github.com/sneakers-the-rat/moseq2-model.git@packaging",
    "moseq2-pca @ git+https://github.com/sneakers-the-rat/moseq2-pca.git@packaging",
    "moseq2-viz @ git+https://github.com/sneakers-the-rat/moseq2-viz.git@packaging",
    "Cython>=3.0.11",
    "requests>=2.32.3",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
